--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -63,7 +63,7 @@ jobs:
           major-label: major release
           minor-label: minor release
           patch-label: patch release
-          noop-labels:
+          noop-labels: |
             skip-release
             documentation change
             dependencies
