--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,16 @@ inputs:
     description: "Folder where requirements.txt has to be saved in"
     required: true
     default: "requirements.txt"
+
+  TOKEN:
+    description: "GitHub token to write back to the repository"
+    required: true
+    default: $GITHUB_TOKEN
+
+  REPOSITORY:
+    description: "The repository to use: [organization|user]/[project]"
+    required: true
+
   PROJECT_NAME:
     description: "Name of the project to include in the commit"
     required: true
