feat: add python script to collect the reqs recursively

--- a/action.yml
+++ b/action.yml
@@ -13,19 +13,10 @@ inputs:
     required: true
     default: "requirements.txt"
 
-  TOKEN:
-    description: "GitHub token to write back to the repository"
+  RECURSIVE:
+    description: "Collect the requirements recursively, ['true'|'false']; default: 'true'"
     required: true
-    default: $GITHUB_TOKEN
-
-  REPOSITORY:
-    description: "The repository to use: [organization|user]/[project]"
-    required: true
-
-  PROJECT_NAME:
-    description: "Name of the project to include in the commit"
-    required: true
-    default: ""
+    default: "true"
 
 runs:
   using: "docker"
