--- a/.github/workflows/lint_tests.yml
+++ b/.github/workflows/lint_tests.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Lint
         run: |
           pip install flake8
-          flake8 main.py
+          cd src && flake8 main.py
 
       - name: Tests
-        run: pytest test_main.py -v
+        run: cd src && pytest test_main.py -v
