--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,13 @@
     "scm.alwaysShowRepositories": false,
     "dev.containers.defaultExtensions": [
         "mutantdino.resourcemonitor"
-    ]
+    ],
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+    "python.autoComplete.extraPaths": [
+        "${workspaceFolder}/src"
+    ],
 }
