--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,10 @@
     "python.autoComplete.extraPaths": [
         "${workspaceFolder}/src"
     ],
+    "command-runner.terminal.name": "Run Command",
+    "command-runner.terminal.autoClear": true,
+    "command-runner.terminal.autoFocus": true,
+    "command-runner.commands": {
+        "run pytest testsuite": "cd ${workspaceFolder} && pytest --cov --cov-branch --cov-report term --cov-report xml:coverage/cov.xml --cov-report html:coverage/cov_html"
+    }
 }
