--- a/.github/workflows/lint_tests.yml
+++ b/.github/workflows/lint_tests.yml
@@ -28,7 +28,7 @@ jobs:
           cd src && flake8
 
       - name: Run tests
-        run: pytest --cov --cov-branch --cov-report xml:coverage/cov.xml
+        run: pytest --cov --cov-branch --cov-report xml:coverage/cov.xml --cov-report lcov:coverage/cov.info
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
@@ -43,6 +43,6 @@ jobs:
         uses: barecheck/code-coverage-action@v1
         with:
           barecheck-github-app-token: ${{ secrets.BARECHECK_GITHUB_APP_TOKEN }}
-          lcov-file: "coverage/cov.xml"
+          lcov-file: "coverage/cov.info"
           send-summary-comment: true
           show-annotations: ''
