fix: update postAttachCommands.sh and pyproject.toml for setuptools-scm installation and configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,31 @@ addopts = [
 
 [build-system]
 requires = [
-    "setuptools"
+    "setuptools",
+    "wheel",
+    "setuptools-scm"
 ]
-build-backend = "setuptools.buid_meta"
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "pipreqs-action"
+description = "Automatisierte Erstellung von requirements.txt für Python-Projekte mit GitHub Actions."
+authors = [
+    { name = "Dein Name", email = "deine.email@example.com" }
+]
+readme = "README.md"
+requires-python = ">=3.8"
 dynamic = ["version"]
+dependencies = [
+    "pipreqs",
+    "pytest",
+    "pytest-cov",
+    "flake8",
+    "black",
+    "isort",
+    "pyupgrade"
+]
+
+[tool.setuptools_scm]
+version_scheme = "post-release"
+local_scheme = "no-local-version"
