--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dynamic = ["version"]
 dependencies = [
-    "pipreqs"
+    "pipreqs==0.5.0",
+    "GitPython==3.1.44"
 ]
 
 [project.optional-dependencies]
