Update dependabot.yml: fox syntax error

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,5 +22,5 @@ updates:
     schedule:
       interval: "weekly"
     ignore:
-      - dependency-name: "python:*"
-        versions: [">=3.13.*"]
+      - dependency-name: "python"
+        versions: [">=3.13"]
