--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,18 +57,12 @@ jobs:
           commit_message: 'docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]'
           file_pattern: CHANGELOG.md
 
-      - name: Create Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: 'Release ${{ github.ref_name }}'
-          body: ${{ steps.changelog.outputs.changes }}
-
-      - name: Upload Release Assets
+      - name: Create Release And Upload Assets
         uses: softprops/action-gh-release@v2
         with:
+          body: ${{ steps.changelog.outputs.changes }}
+          tag_name: ${{ github.ref_name }}
+          name: 'Release ${{ github.ref_name }}'
           files: dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
