build: add command to run HTTP server for coverage report in settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,10 +13,12 @@
     "python.autoComplete.extraPaths": [
         "${workspaceFolder}/src"
     ],
+    "python.analysis.typeCheckingMode": "strict",
     "command-runner.terminal.name": "Run Command",
     "command-runner.terminal.autoClear": true,
     "command-runner.terminal.autoFocus": true,
     "command-runner.commands": {
-        "run pytest testsuite": "cd ${workspaceFolder} && pytest --cov --cov-branch --cov-report term --cov-report xml:coverage/cov.xml --cov-report html:coverage/cov_html"
+        "run pytest testsuite": "cd ${workspaceFolder} && pytest --cov --cov-branch --cov-report term --cov-report xml:coverage/cov.xml --cov-report html:coverage/cov_html",
+        "run HTTP server Coverage Report": "cd ${workspaceFolder} && python3 -m http.server 8888 --directory coverage/cov_html",
     }
 }
