--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,8 +59,15 @@ jobs:
           version=$(python -c "import setuptools_scm; print(setuptools_scm.get_version())")
           echo "VERSION=$version" >> $GITHUB_ENV
 
+      - name: Check change on Dockerfile-git-python
+        id: check-dockerfile-git-python
+        uses: tj-actions/verify-changed-files@v20.0.4
+        with:
+          files: Dockerfile-git-python
+      
       - id: dockerhub-docker-login
         name: DockerHub Docker Login
+        if: steps.check-dockerfile-git-python.outputs.files_changed == 'true'
         uses: docker/login-action@v3.4.0
         with:
           username: ${{ steps.dockerhub-registry-secrets.outputs.secret2 }}
@@ -70,12 +77,14 @@ jobs:
 
       - name: Set up Docker buildx
         id: setup-docker-buildx
-        uses: docker/setup-buildx-action@v3.10.0
+        if: steps.check-dockerfile-git-python.outputs.files_changed == 'true'
+        uses: docker/setup-buildx-action@v3.11.1
 
       - name: Build and push
+        if: steps.check-dockerfile-git-python.outputs.files_changed == 'true'
         env:
           VERSION: ${{ env.VERSION }}
-        uses: docker/build-push-action@v6.15.0
+        uses: docker/build-push-action@v6.18.0
         with:
           context: .
           file: Dockerfile-git-python
@@ -85,23 +94,33 @@ jobs:
             docker.io/jfheinrich/pipreqs-action:${{ env.VERSION }}
             docker.io/jfheinrich/pipreqs-action:latest
 
+      - name: Update repo description
+        uses: peter-evans/dockerhub-description@v4.0.2
+        with:
+          username: ${{ steps.dockerhub-registry-secrets.outputs.secret2 }}
+          password: ${{ steps.dockerhub-registry-secrets.outputs.secret3 }}
+          repository: jfheinrich/pipreqs-action
+          short-description: ""
+          readme-filepath: README-Dockerfile-git-python.md
+          enable-url-completion: true            
+
       - name: Update CHANGELOG
         id: changelog
-        uses: requarks/changelog-action@v1
+        uses: requarks/changelog-action@v1.10.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref_name }}
 
       - name: Commit CHANGELOG.md
         continue-on-error: true
-        uses: stefanzweifel/git-auto-commit-action@v5
+        uses: stefanzweifel/git-auto-commit-action@v6.0.1
         with:
           branch: master
           commit_message: 'docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]'
           file_pattern: CHANGELOG.md
 
       - name: Create Release And Upload Assets
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v2.3.2
         with:
           body: ${{ steps.changelog.outputs.changes }}
           tag_name: ${{ github.ref_name }}
