--- a/Dockerfile-git-python
+++ b/Dockerfile-git-python
@@ -40,7 +40,10 @@ ENV LD_LIBRARY_PATH="/opt/git/lib"
 CMD ["python3"]
 
 # Stage 3: Application build image
-FROM final_base AS builder
+FROM python:3.12-alpine AS builder
+COPY --from=final_base /opt/git /opt/git
+ENV PATH="/opt/git/bin:${PATH}"
+ENV LD_LIBRARY_PATH="/opt/git/lib"
 ADD . /project
 WORKDIR /project
 RUN mkdir /app && \
@@ -49,7 +52,10 @@ RUN mkdir /app && \
     chmod 755 /app/app.py
 
 # Stage 4: Final application image
-FROM final_base AS final
+FROM python:3.12-alpine AS final
+COPY --from=builder /opt/git /opt/git
 COPY --from=builder /app /app
+ENV PATH="/opt/git/bin:${PATH}"
+ENV LD_LIBRARY_PATH="/opt/git/lib"
 ENV PYTHONPATH=/app
 ENTRYPOINT ["/app/app.py"]
