--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,26 +9,6 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
-  secret_whisperer:
-    runs-on: ubuntu-latest
-    outputs:
-      CI_REGISTRY: ${{ steps.dockerhub-registry-secrets.outputs.secret1 }}
-      CI_REGISTRY_USER: ${{ steps.dockerhub-registry-secrets.outputs.secret2 }}
-      CI_REGISTRY_PASSWORD: ${{ steps.dockerhub-registry-secrets.outputs.secret3 }}
-      CI_REGISTRY_IMAGE_PREFIX: ${{ steps.dockerhub-registry-secrets.outputs.secret4 }}
-    steps:
-      - name: Get DockerHub Registry Secrets
-        id: dockerhub-registry-secrets
-        uses: jfheinrich-eu/psono-secret-whisperer@v1.0.0
-        with:
-          ci_api_key_id: ${{ secrets.PSONO_API_KEY_ID }}
-          ci_api_secret_key_hex: ${{ secrets.PSONO_API_SECRET_KEY_HEX }}
-          ci_server_url: ${{ vars.PSONO_SERVER_URL }}
-          secret_id: ${{ secrets.PSONO_DOCKERHUB_REGISTRY_ID }}
-          secret_type: 'env'
-          secret_fields: "CI_REGISTRY,CI_REGISTRY_USER,CI_REGISTRY_PASSWORD,CI_REGISTRY_IMAGE_PREFIX"
-          mask_secrets: CI_REGISTRY_USER,CI_REGISTRY_PASSWORD
-
   tests:
     runs-on: ubuntu-latest
     outputs:
@@ -63,7 +43,6 @@ jobs:
 
   build_and_push_image:
     needs:
-      - secret_whisperer
       - tests
     runs-on: ubuntu-latest
     strategy:
@@ -73,13 +52,17 @@ jobs:
     env:
       VERSION: ${{ needs.tests.outputs.VERSION }}
     steps:
+      - name: Dockerhub Registry Secrets
+        id: secret_whisperer
+        uses: ./.github/actions/secret_whisperer_dockerhub_registry
+
       - uses: actions/checkout@v4.2.2
 
       - name: Docker login
         uses: docker/login-action@v3.4.0
         with:
-          username: ${{ needs.secret_whisperer.outputs.CI_REGISTRY_USER }}
-          password: ${{ needs.secret_whisperer.outputs.CI_REGISTRY_PASSWORD }}
+          username: ${{ steps.secret_whisperer.outputs.CI_REGISTRY_USER }}
+          password: ${{ steps.secret_whisperer.outputs.CI_REGISTRY_PASSWORD }}
 
       - uses: docker/setup-qemu-action@v3.6.0
 
@@ -122,15 +105,18 @@ jobs:
   manifest:
     needs:
       - build_and_push_image
-      - secret_whisperer
       - tests
     runs-on: ubuntu-latest
     steps:
+      - name: Dockerhub Registry Secrets
+        id: secret_whisperer
+        uses: ./.github/actions/secret_whisperer_dockerhub_registry
+
       - name: Docker login
         uses: docker/login-action@v3.4.0
         with:
-          username: ${{ needs.secret_whisperer.outputs.CI_REGISTRY_USER }}
-          password: ${{ needs.secret_whisperer.outputs.CI_REGISTRY_PASSWORD }}
+          username: ${{ steps.secret_whisperer.outputs.CI_REGISTRY_USER }}
+          password: ${{ steps.secret_whisperer.outputs.CI_REGISTRY_PASSWORD }}
 
       - name: Download all build statuses
         uses: actions/download-artifact@v4.3.0
@@ -164,8 +150,8 @@ jobs:
       - name: Update DockerHub description
         uses: peter-evans/dockerhub-description@v4.0.2
         with:
-          username: ${{ needs.secret_whisperer.outputs.CI_REGISTRY_USER }}
-          password: ${{ needs.secret_whisperer.outputs.CI_REGISTRY_PASSWORD }}
+          username: ${{ steps.secret_whisperer.outputs.CI_REGISTRY_USER }}
+          password: ${{ steps.secret_whisperer.outputs.CI_REGISTRY_PASSWORD }}
           repository: jfheinrich/pipreqs-action
           short-description: "Automatically generates pip requirement files based on imports in your Python project."
           readme-filepath: README-Dockerfile-git-python.md
