--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,11 +52,11 @@ jobs:
     env:
       VERSION: ${{ needs.tests.outputs.VERSION }}
     steps:
+      - uses: actions/checkout@v4.2.2
+        
       - name: Dockerhub Registry Secrets
         id: secret_whisperer
         uses: ./.github/actions/secret_whisperer_dockerhub_registry
-
-      - uses: actions/checkout@v4.2.2
 
       - name: Docker login
         uses: docker/login-action@v3.4.0
@@ -91,15 +91,19 @@ jobs:
             org.opencontainers.image.authors=J.F. Heinrich <jfheinrich@users.noreply.github.com>
 
       - name: Save build status
+        id: build-status
         if: always()
+        env:
+          ARCH: ${{ matrix.arch }}
         run: |
           echo "${{ matrix.arch }}: ${{ steps.docker-build.outcome }}" >> status.txt
+          echo "ARCH_SAFE=${ARCH//\//-}" >> $GITHUB_OUTPUT
 
       - name: Upload build status artifact
         if: always()
         uses: actions/upload-artifact@v4.6.2
         with:
-          name: build-status-${{ matrix.arch }}
+          name: build-status-${{ steps.build-status.outputs.ARCH_SAFE }}
           path: status.txt
 
   manifest:
@@ -108,6 +112,8 @@ jobs:
       - tests
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4.2.2
+        
       - name: Dockerhub Registry Secrets
         id: secret_whisperer
         uses: ./.github/actions/secret_whisperer_dockerhub_registry
