--- a/.github/actions/secret_whisperer_dockerhub_registry/action.yml
+++ b/.github/actions/secret_whisperer_dockerhub_registry/action.yml
@@ -2,6 +2,19 @@ name: secret_whisperer_dockerhub_registry
 description: "This action manages secrets for GitHub Actions workflows."
 author: "Joerg Heinrich"
 
+inputs:
+  PSONO_API_KEY_ID:
+    description: "The API key ID for Psono."
+    required: true
+  PSONO_API_SECRET_KEY_HEX:
+    description: "The API secret key in hexadecimal format for Psono."
+    required: true
+  PSONO_SERVER_URL:
+    description: "The URL of the Psono server."
+    required: true
+  PSONO_DOCKERHUB_REGISTRY_ID:
+    description: "The ID of the DockerHub registry secret in Psono."
+    required: true
 outputs:
   CI_REGISTRY:
     description: "The URL of the CI registry."
@@ -23,10 +36,10 @@ runs:
       id: dockerhub-registry-secrets
       uses: jfheinrich-eu/psono-secret-whisperer@v1.0.0
       with:
-        ci_api_key_id: ${{ secrets.PSONO_API_KEY_ID }}
-        ci_api_secret_key_hex: ${{ secrets.PSONO_API_SECRET_KEY_HEX }}
-        ci_server_url: ${{ vars.PSONO_SERVER_URL }}
-        secret_id: ${{ secrets.PSONO_DOCKERHUB_REGISTRY_ID }}
+        ci_api_key_id: ${{ inputs.PSONO_API_KEY_ID }}
+        ci_api_secret_key_hex: ${{ inputs.PSONO_API_SECRET_KEY_HEX }}
+        ci_server_url: ${{ inputs.PSONO_SERVER_URL }}
+        secret_id: ${{ inputs.PSONO_DOCKERHUB_REGISTRY_ID }}
         secret_type: "env"
         secret_fields: "CI_REGISTRY,CI_REGISTRY_USER,CI_REGISTRY_PASSWORD,CI_REGISTRY_IMAGE_PREFIX"
         mask_secrets: CI_REGISTRY_USER,CI_REGISTRY_PASSWORD
