--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
     "command-runner.commands": {
         "run pytest testsuite": "cd ${workspaceFolder} && pytest --cov --cov-branch --cov-report term --cov-report xml:coverage/cov.xml --cov-report html:coverage/cov_html",
         "run HTTP server Coverage Report": "cd ${workspaceFolder} && python3 -m http.server 8888 --directory coverage/cov_html",
-    }
+    },
+    "commentTranslate.targetLanguage": "en"
 }
